# cryoid

./: .gitignore  Cargo.toml  README.md
benches/: gen.rs
examples/minimal/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: batch.rs  decode.rs  error.rs  generator.rs  layout.rs  lib.rs  tests.rs
src/layouts/: compact48.rs  mod.rs  snowflake63.rs  tagged63.rs
